# Enterprise-Agent-

./: .ci-trigger  .coverage  .dockerignore  .env.example  .gitignore  CLAUDE_CODE_GIT_FIX_PROMPT.md  CLAUDE_CODE_SETUP.md  CLAUDE_SETUP_GUIDE.md  CODE_REVIEW_ISSUES.md  CODE_REVIEW_RESOLUTION_SUMMARY.md  COMPREHENSIVE_REFACTORING_REPORT.md  COMPREHENSIVE_TEST_FIXING_PLAN.md  COMPREHENSIVE_TEST_SUITE_SUMMARY.md  Dockerfile  ENHANCEMENT_SUMMARY.md  GIT_COMMANDS_TO_RUN.md  GIT_COMMIT_FIX_PLAN.md  IMPROVEMENTS_GUIDE.md  IMPROVEMENTS_SUMMARY.md  MIGRATION_COMPLETE.md  MULTI_PROJECT_USAGE.md  Makefile  PHASE2_SUMMARY.md  PRODUCTION_READINESS_REPORT.md  QUICK_START_MULTI_PROJECT.md  README.md  REFACTORING_COMPLETE.md  SECURITY.md  TEST_RESULTS.md  TEST_RESULTS_FINAL.md  USAGE.md  additional_issues_resolved.md  agent.ps1  agent_deploy.py  bandit-report.json  enterprise_agent_cli.py  er.name  fix_git_commits.bat  fix_git_commits.ps1  install.sh  (+25 more)
.claude/: settings.local.json
.cursor/: settings.json
.cursor/workflows/: enterprise-agent.yml
.github/: dependabot.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  performance.yml  release.yml
benchmarks/: run_benchmarks.py
configs/: agent_config_v3.4.yaml  claude_code_config.yaml  rate_limits.yaml
docs/: quickstart.md
docs/domains/: coding.md  content.md  real_estate.md  social_media.md  trading.md  ui.md
scripts/: benchmark_async.py  benchmark_async_simple.py  postinstall.js
src/: agent_orchestrator.py  exceptions.py
src/governance/: metrics.py
src/memory/: async_storage.py  storage.py
src/orchestration/: async_orchestrator.py
src/providers/: __init__.py  async_claude_provider.py  auth_manager.py  claude_code_provider.py
src/roles/: base.py  coder.py  planner.py  reflector.py  reviewer.py  validator.py
src/roles/validators/: __init__.py
src/tools/: integrations.py
src/utils/: async_cache.py  async_http.py  cache.py  circuit_breaker.py  claude_cli.py  concurrency.py  config_validator.py  cost_tracker.py  errors.py  metrics.py  notifications.py  observability.py  rate_limiter.py  reflection_audit.py  retry.py  safety.py  secrets.py  security_audit.py  telemetry.py  usage_monitor.py  validation.py
test_results/: comprehensive_test_report_1758464023.json  test_summary.txt
tests/: test_auth_manager.py  test_ci_validation.py  test_circuit_breaker.py  test_claude_code_provider.py  test_enhanced_agent_failures.py  test_enhanced_features.py  test_rate_limiter.py
tests/comprehensive/: __init__.py  test_complete_functionality.py  test_framework.py
tests/comprehensive/layer1_unit/: test_async_complete.py  test_orchestrator_complete.py  (+3 more)
tests/integration/: test_config_env.py  test_live_providers.py  test_smoke.py
tests/performance/: test_async_performance.py
tests/security/: test_command_injection.py
tests/unit/: test_orchestrator_models.py  test_roles.py  test_safety.py  test_tools.py
