[tool.poetry]
name = "enterprise-coding-agent-v3.4"
version = "3.4.0"
description = "Multi-domain AI agent for SDLC and knowledge workflows"
authors = ["Your Team <team@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
langgraph = "0.6.7"  # Pinned for stable graph workflows
openai = "1.2.0"  # Pinned for GPT-5-Codex support
anthropic = "0.20.0"  # Pinned for Claude backups
google-generativeai = "0.7.0"  # Pinned for Gemini
pyyaml = "6.0.1"  # Pinned for YAML loading
pinecone-client = "3.2.2"  # Pinned for vector memory
networkx = "3.3"  # Pinned for graphs
requests = "2.31.0"  # Pinned for API calls
python-dotenv = "1.0.1"  # For .env loading
docker = "7.1.0"  # Pinned for containerization
"ruamel.yaml" = "0.18.6"  # Pinned for advanced YAML
pytest-cov = "4.1.0"  # For test coverage
mypy = "1.8.0"  # For type checking

[build-system]
requires = ["poetry-core==1.7.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.4"
black = "23.12.1"
isort = "5.13.2"
ruff = "0.1.15"
bandit = "1.7.5"
pbr = "6.0.0"
pytest-cov = "4.1.0"
mypy = "1.8.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.isort]
profile = 'black'
line_length = 88
combine_as_imports = true

